--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,8 @@
 # TODO:
 # - cache this directory $HOME/.cache/pyensembl/
 # - update coveralls
+# - get a badge for tests passing
+# - download binary dependencies from conda
 name: Tests
 on: [push, pull_request]
 
@@ -26,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest pytest-cov coveralls
+          python -m pip install flake8 pytest pytest-cov coveralls pylint
           pip install -r requirements.txt
           pip install .
       - name: Lint with flake8
